--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <h1>홍길동의 포트폴리오</h1>
     <nav>
       <a href="#about">자기소개</a> | 
-      <a href="#skills">기술 스택</a> | 
+      <a href="#skills">장점</a> | 
       <a href="#contact">연락처</a>
     </nav>
   </header>
 
   <section id="about">
     <h2>자기소개</h2>
-    <p>안녕하세요! 대학생 홍길동입니다.</p>
+    <p>안녕하세요! 한양여대 재학 중인 홍길동입니다.</p>
   </section>
 
   <section id="skills">
-    <h2>기술 스택</h2>
-    <p>HTML, CSS, JavaScript, React</p>
+    <h2>장점</h2>
+    <p>긍정적, 성실함, 친절함</p>
   </section>
 
   <section id="contact">
     <h2>연락처</h2>
-    <p>이메일: honghong@example.com</p>
+    <p>이메일: hywoman@example.com</p>
   </section>
 
   <footer>
